Correccions a les primeres entrades i estils dels peus de foto

--- a/_posts/2022-10-09-hey-hola.md
+++ b/_posts/2022-10-09-hey-hola.md
@@ -8,9 +8,11 @@ excerpt_separator: <!--more-->
 tags:
 ---
 
+Provant... Provant...
+
 Hola!
 
-Aquest que tens davant la pantalla o pantalleta voldria ser un [blog](https://aplicacions.llengua.gencat.cat/llc/AppJava/index.html?action=Principal&method=detall&input_cercar=bloc+o+blog&numPagina=1&database=FITXES_PUB&idFont=10475&idHit=10475&tipusFont=Fitxes+de+l%27Optimot&numeroResultat=1&databases_avansada=&categories_avansada=&clickLink=detall&titol=bloc+o+blog%3F+%2F+blocaire+o+bloguer+-a%3F&tematica=Tecnologies+de+la+informaci%F3+i+la+comunicaci%F3&tipusCerca=cerca.tot)[^1]. No prometo res, és clar. Que només em faltava a mi comprometre'm davant de probablement ningú a esciure un blog de forma regular.
+Aquest que tens davant la pantalla o pantalleta voldria ser un blog[^1]. No prometo res, és clar. Que només em faltava a mi comprometre'm davant de probablement ningú a esciure un blog de forma regular.
 
 <!--more-->
 
@@ -40,5 +42,5 @@ Doncs això, proves de so fetes. A partir d'aquí _alea jacta est_ i endavant le
 
 ---
 
-[^1]: Bé, a mi, que escric [un blog professional](https://blog.agilogy.com) en anglès, m'hagués agradat que fos un bloc. Em feia gràcia. Però es veu que no, que diu Optimot que blog. I ja que m'hi poso, fem-ho bé i mirem d'escriure tan correctament com bonament pugui.
+[^1]: Bé, a mi, que escric [un blog professional](https://blog.agilogy.com) en anglès, m'hagués agradat que fos un [bloc](https://aplicacions.llengua.gencat.cat/llc/AppJava/index.html?action=Principal&method=detall&input_cercar=bloc+o+blog&numPagina=1&database=FITXES_PUB&idFont=10475&idHit=10475&tipusFont=Fitxes+de+l%27Optimot&numeroResultat=1&databases_avansada=&categories_avansada=&clickLink=detall&titol=bloc+o+blog%3F+%2F+blocaire+o+bloguer+-a%3F&tematica=Tecnologies+de+la+informaci%F3+i+la+comunicaci%F3&tipusCerca=cerca.tot). Em feia gràcia. Però es veu que no, que diu Optimot que blog. I ja que m'hi poso, fem-ho bé i mirem d'escriure tan correctament com bonament pugui.
 [^2]: Eventualment va aparèixer. Però al límit: si baixes només 3 notes avall cap als greus arribes al Sol, que és la nota més greu que pots tocar amb el violí.
