Corregir error tipogràfic

--- a/_posts/2022-10-09-hey-hola.md
+++ b/_posts/2022-10-09-hey-hola.md
@@ -12,7 +12,7 @@ Provant... Provant...
 
 Hola!
 
-Aquest que tens davant la pantalla o pantalleta voldria ser un blog[^1]. No prometo res, és clar. Que només em faltava a mi comprometre'm davant de probablement ningú a esciure un blog de forma regular.
+Aquest que tens davant la pantalla o pantalleta voldria ser un blog[^1]. No prometo res, és clar. Que només em faltava a mi comprometre'm davant de probablement ningú a escriure un blog de forma regular.
 
 <!--more-->
 
