Publica des d'Obsidian
Això es carrega tots els permalinks anteriors, però suposo que ara mateix no està ni indexat...

Per què se'ls carrega? Perquè vull una estructura d'enllaços que funcioni igual en local a Obsidian que a la web generada per Jekyll. Així, per exemple, no vull cad posst en una carpeta YYYY-MM-dd i, per tant, no vull urls dels posts de la forma YYYY-MM-dd/titol.

--- a/_posts/2022-10-09-hey-hola.md
+++ b/_posts/2022-10-09-hey-hola.md
@@ -1,11 +1,13 @@
 ---
 layout: music
-title:  "Ei! Hola? Si! Ei! Check!"
-date:   2022-10-09
+title: Ei! Hola? Si! Ei! Check!
+date: 2022-10-09
 categories: musica
-author: 'Jordi'
+author: Jordi
 excerpt_separator: <!--more-->
-tags:
+tags: 
+aliases:
+  - Ei! Hola? Si! Ei! Check!
 ---
 
 Provant... Provant...
