--- a/_posts/2022-10-09-hey-hola.md
+++ b/_posts/2022-10-09-hey-hola.md
@@ -36,7 +36,7 @@ Des d'aquí, tot molt ràpid. La [Roser](https://www.aulasuzukicanroget.cat/prof
 
 Un blog, deia, però, que me'n vaig per les branques...
 
-La cosa és que vaig a classes de teoria de la música. I hi prenc apunts, com sempre feia quan estudiava a la universitat. I, clar, si no els passo a net i complemento llegint el que trobo, no sóc jo. Sobretot perquè sense l'esforç de fer-ho no em quedo amb el que se suposa que he après perquè m'ho han explicat. 
+La cosa és que vaig a les classes de teoria de la música de la [Carla](https://www.aulasuzukicanroget.cat/carla-garcia-canet-professora/). I hi prenc apunts, com sempre feia quan estudiava a la universitat. I, clar, si no els passo a net i complemento llegint el que trobo, no sóc jo. Sobretot perquè sense l'esforç de fer-ho no em quedo amb el que se suposa que he après perquè m'ho han explicat. 
 
 I ja que hi sóc, per què no prendre apunts en obert? No pretenc que serveixin a ningú més. Si vulgués públic sé que hauria de fer vídeos i allà no m'hi veureu. Però a **mi** m'anirà bé. I, ves a saber.
 
